fixing logo to not take up too much space on narrow screens, updating instructions

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,11 @@ body{
 	width:100%;
 	height:100%;
 }
+
+#logo>img{
+	max-width:75%;
+}
+
 #instructions{
 	position:absolute;
 	top:5px;
